--- a/demo/.vscode/tasks.json
+++ b/demo/.vscode/tasks.json
@@ -9,9 +9,10 @@
                 "build",
                 "${workspaceFolder}/demo.csproj",
                 "/property:GenerateFullPaths=true",
-                "/consoleloggerparameters:NoSummary"
+                "/consoleloggerparameters:NoSummary",
+                "/property:GenerateFullPaths=true"
             ],
-            "problemMatcher": "$msCompile"
+            "problemMatcher": "$msCompile",
         },
         {
             "label": "publish",
@@ -21,7 +22,8 @@
                 "publish",
                 "${workspaceFolder}/demo.csproj",
                 "/property:GenerateFullPaths=true",
-                "/consoleloggerparameters:NoSummary"
+                "/consoleloggerparameters:NoSummary",
+                "/property:GenerateFullPaths=true"
             ],
             "problemMatcher": "$msCompile"
         },
@@ -33,7 +35,8 @@
                 "watch",
                 "run",
                 "--project",
-                "${workspaceFolder}/demo.csproj"
+                "${workspaceFolder}/demo.csproj",
+                "/property:GenerateFullPaths=true"
             ],
             "problemMatcher": "$msCompile"
         }
